2004-07-14  Charles "Buck" Krasic  <krasic@acm.org>

	* libdv 0.103 release
	* update README to note that "bootstrap" is now obolete in light of
	  autoreconf provided by autotools.

2004-07-13  Dan Dennedy <dan@dennedy.org>
	* libdv/dv.h, dv_types.h, headers.c, encode.c: use inttypes.h instead of
	  stdint.h as it is more universal.
	* libdv/dv_types.h: remove unused static variables
	* libdv/dv1394.h: removed

2004-07-06  Dan Dennedy <dan@dennedy.org>
	* libdv/dv.c: fix SMPTE314M typo in dv_format_wide()

2004-07-05  Dan Dennedy <dan@dennedy.org>
	* libdv/encode.c: apply patch from Johannes Sixt to make encoder thread-safe
	  by mutex locks.
	* added libdv/enctest.c to test thread-safetiness of encoder (also from
	  Johannes Sixt).
	* libdv/enc_input.c: make ppm reader more compatible (specifically y4m2ppm).

2004-06-10  Dan Dennedy <dan@dennedy.org>
	* libdv/dv.c: apply patch from Johannes Sixt to fix race condition and bug
	  using deallocated memory.

2004-05-29  Dan Dennedy <dan@dennedy.org>
	* configure.ac, libdv.pc.in: remove gtk from libdv pkg-config dependencies
	  as the core lib has not required glib for some time now!
	* encodedv/dvconnect.c: disable paging for dvconnect's internal buffers
	  (patch from Daniel Kobras)

2004-05-13  Dan Dennedy <dan@dennedy.org>
	* libdv/dv.c: add another IEC widescreen code to dv_format_wide().

2004-03-15  Dan Dennedy <dan@dennedy.org>
	* libdv/dv.c: fix widescreen detection for SMPTE vs IEC.
	* libdv/dv.h, dv.c: added dv_format_letterbox()
	* libdv/audio.c, dv.h: added dv_is_normal_speed()

2004-01-19  Dan Dennedy <dan@dennedy.org>
	* libdv/enc_input.c: workaround potential V4L compilation error.
	  (bug 879258)
	* libdv/Makefile.am: set the AGE back to 0 on the current interface
	  version due to breaking binary compatibility.

2004-01-16  Charles 'Buck' Krasic  <krasic@acm.org>

	* libdv 0.100 release

2004-01-13  Dan Dennedy <dan@dennedy.org>
	* encodedv/dvconnect.c: change a video1394 ioctl macro for better