@@ -8,7 +8,7 @@ AC_CANONICAL_HOST
 AC_CANONICAL_TARGET
 AM_INIT_AUTOMAKE(libdv, 0.103)
 
-AM_MAINTAINER_MODE
+dnl AM_MAINTAINER_MODE
 AC_LIBTOOL_PICMODE(no)
 
 dnl Checks for programs.
